# tigon2

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  YCSB指南.md  allocator审计.md  e2e_trace_runner_alias.cpp  experiment_config.jsonc  prepare_e2e_ycsb_traces.sh  run_e2e_ycsb_rounds.sh  tigonkv_check_vms.sh  tigonkv_init_vms.sh  tigonkv_kill_vms.sh  tigonkv_make_vm_img.sh  tigonkv_run_ycsb_experiment.sh  修改日志.md  内存布局.md  延迟插入审计报告.md  恢复状态.md  搬运清单.md  缓存一致性设计.md
common/: CXLMemory.h  CXL_EBR.h  MPSCRingBuffer.h
common/btree_olc_cxl/: BTreeOLC_CXL.h
emulation/image/: make_vm_img.sh
exp_data/formal-e2e-ycsb/logs-10-concurrent/summary/: YCSB实验报告.md  ycsb_rows.csv  ycsb_summary.json
exp_data/formal-e2e-ycsb/logs-10/summary/: YCSB实验报告.md  ycsb_rows.csv  ycsb_summary.json
exp_data/formal-e2e-ycsb/logs-restart/summary/: YCSB实验报告.md  ycsb_rows.csv  ycsb_summary.json
exp_data/formal-e2e-ycsb/traces/workloadA/: manifest.txt
exp_data/formal-e2e-ycsb/traces/workloadA/load/: worker0.txt  worker1.txt  worker10.txt  worker11.txt  worker12.txt  worker13.txt  worker14.txt  worker15.txt  worker2.txt  worker3.txt  worker4.txt  worker5.txt  worker6.txt  worker7.txt  worker8.txt  worker9.txt
exp_data/ycsb-smoke/: run_meta.json
exp_data/ycsb-smoke-4workers/: run_meta.json
exp_data/ycsb-smoke-4workers-fix/: run_meta.json
exp_data/ycsb-smoke-4workers-fix/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-4workers-stage/: run_meta.json
exp_data/ycsb-smoke-4workers-stage/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-4workers/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-concurrent/: run_meta.json
exp_data/ycsb-smoke-concurrent/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-drain/: run_meta.json
exp_data/ycsb-smoke-drain/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-fixed/: run_meta.json
exp_data/ycsb-smoke-fixed/configs/: experiment_config_ycsb_4vm.jsonc
exp_data/ycsb-smoke-fixed/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-retry/: run_meta.json
exp_data/ycsb-smoke-retry/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-scc/: YCSB实验报告.md  run_meta.json  ycsb_rows.csv  ycsb_summary.json
exp_data/ycsb-smoke-scc/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-staged/: run_meta.json
exp_data/ycsb-smoke-staged/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded/: run_meta.json
exp_data/ycsb-smoke-threaded-clean/: run_meta.json
exp_data/ycsb-smoke-threaded-clean/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-final/: run_meta.json
exp_data/ycsb-smoke-threaded-final/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-ownerdiag/: run_meta.json
exp_data/ycsb-smoke-threaded-ownerdiag/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-ownerdiag2/: run_meta.json
exp_data/ycsb-smoke-threaded-ownerdiag2/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-ready/: run_meta.json
exp_data/ycsb-smoke-threaded-ready/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-rerun/: run_meta.json
exp_data/ycsb-smoke-threaded-rerun/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-serialized/: YCSB实验报告.md  run_meta.json  ycsb_rows.csv  ycsb_summary.json
exp_data/ycsb-smoke-threaded-serialized/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-shared/: run_meta.json
exp_data/ycsb-smoke-threaded-shared/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-uniqueids/: run_meta.json
exp_data/ycsb-smoke-threaded-uniqueids/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded-verbose/: run_meta.json
exp_data/ycsb-smoke-threaded-verbose/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke-threaded/traces/workloadA/: manifest.txt
exp_data/ycsb-smoke/configs/: experiment_config_ycsb_4vm.jsonc
exp_data/ycsb-smoke/traces/workloadA/: manifest.txt
kv/: kv_store.cpp  kv_store.h  latency_simulator.cpp  latency_simulator.h  memory_domains.h
kv/engine/: kv_engine.cpp  kv_engine.h  kv_messages.h  kv_partition.cpp  kv_partition.h  kv_types_layout.h  latency_inject.cpp  latency_inject.h  mem_access.h  region_allocator.cpp  region_allocator.h
protocol/Pasha/: SCCManager.h
protocol/TwoPLPasha/: TwoPLPashaHelper.h
scripts/: summarize_ycsb_experiment.py  tigonkv_vm_common.sh
scripts/e2e/: run_guest_e2e_workflows.sh
scripts/e2e_trace/: README.md  prepare_ycsb_traces.sh  run_guest_ycsb_workflows.sh  run_ycsb_workflows.sh
scripts/vm/: check_environment.sh  start_existing_topology.sh  stop_tigon_processes.sh  sync_to_vms.sh
tests/: btree_binding_test.cpp  e2e_08.cpp  e2e_09.cpp  e2e_trace_multivm_test.sh  e2e_vm_workflow.h  e2e_ycsb_entrypoints_test.sh  kv_engine_test.cpp  kv_layout_test.cpp  kv_partition_test.cpp  kv_shared_protocol_test.cpp  latency_modes_test.cpp  region_allocator_test.cpp  scc_protocol_test.cpp  scc_test_backend.cpp  scc_test_backend.h  tigonkv_tests.cpp  vm_scripts_test.sh  ycsb_scripts_test.sh
tests/e2e/: n_vm_ssh_e2e.sh  n_vm_ssh_e2e_common.sh  run_e2e_rounds.sh
tests/e2e_08/: vm1_e2e_08.sh
tests/e2e_09/: vm0_e2e_09.sh
tests/fixtures/: experiment_config.jsonc  golden_qemu_cmdline_4vm.txt  multivm_trace_config.jsonc  multivm_trace_node0.txt  multivm_trace_node1.txt  trace.txt  ycsb_experiment_config.jsonc
tools/: cxl_pool_initer.cpp  e2e_trace_runner.cpp  numa_placement_probe.cpp
(+472 files in other folders)
